# shy-sh

./: .gitignore  License.md  README.md  pyproject.toml  pytest.ini  shy
.github/workflows/: main.yml  publish.yml  tests.yml
.github/wotkflows/: main.yml
script/: eval
shy_sh/: chat_models.py  main.py  models.py  settings.py  utils.py
shy_sh/agent/: agent.py  chat_models.py  graph.py  models.py  tools.py  utils.py
shy_sh/agent/chains/: bash_exec.py  bash_expert.py  python_expert.py  screenshot.py  shell_exec.py  shell_expert.py  shy_agent.py
shy_sh/agent/edges/: final_response.py  tool_calls.py
shy_sh/agent/nodes/: chatbot.py  tools_handler.py  utils.py
shy_sh/agents/: agent.py  llms.py  misc.py
shy_sh/agents/chains/: alternative_commands.py  explain.py  python_expert.py  screenshot.py  shell_expert.py  shy_agent.py
shy_sh/agents/shy_agent/: agent.py  graph.py
shy_sh/agents/shy_agent/edges/: final_response.py  tool_calls.py
shy_sh/agents/shy_agent/nodes/: chatbot.py  tools_handler.py
shy_sh/agents/tools/: __init__.py  python_expert.py  shell.py  shell_expert.py  shell_history.py
tests/: conftest.py  test_cli.py  test_eval.py  test_eval_experts.py  utils.py
